Selected weather container given more padding to prevent overflow

--- a/client/src/Components/SelectedWeather/SelectedWeather.css
+++ b/client/src/Components/SelectedWeather/SelectedWeather.css
@@ -3,6 +3,7 @@
     width: 40%;
     height: 20em;
     padding: 2em;
+    padding-bottom: 4em;
     margin-top: 2em;
 }
 
